--- a/app/src/main/res/layout/fragment_bible.xml
+++ b/app/src/main/res/layout/fragment_bible.xml
@@ -6,7 +6,7 @@
     android:layout_height="fill_parent">
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
