--- a/app/src/main/res/layout/chapter.xml
+++ b/app/src/main/res/layout/chapter.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content" />
 
     <ListView android:id="@android:id/list"
+        android:dividerHeight="0.5dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
