Nav Header Changes.

--- a/app/src/main/res/drawable/header_bg.xml
+++ b/app/src/main/res/drawable/header_bg.xml
@@ -5,7 +5,7 @@
 
     <gradient
         android:startColor="#009efd"
-        android:endColor="#2af598"
+        android:endColor="#0478DD"
         android:angle="270"
         />
 
