--- a/app/src/main/res/layout/chapter.xml
+++ b/app/src/main/res/layout/chapter.xml
@@ -11,6 +11,7 @@
 
     <ListView android:id="@android:id/list"
         android:dividerHeight="0.5dp"
+        android:divider="#B6B5B5"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
