--- a/app/src/main/res/layout/content_holy__bible.xml
+++ b/app/src/main/res/layout/content_holy__bible.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:theme="@style/Theme.AppCompat.NoActionBar"
 
@@ -10,8 +11,20 @@
     <ListView
         android:id="@+id/listview"
         android:dividerHeight="0.5dp"
+        android:divider="#D3D1D1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <com.nightonke.boommenu.BoomMenuButton
+        android:id="@+id/bmb"
+
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:bmb_buttonEnum="ham"
+        app:bmb_piecePlaceEnum="piecePlace_ham_4"
+        app:bmb_buttonPlaceEnum="buttonPlace_ham_4"
+        android:background="#000"
+        />
 
     <FrameLayout
         android:id="@+id/content_frame"
