--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#009efd</color>
-    <color name="colorPrimaryDark">#0172B6</color>
+    <color name="colorPrimaryDark">#0478DD</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
