--- a/app/src/main/res/layout/content_holy__bible.xml
+++ b/app/src/main/res/layout/content_holy__bible.xml
@@ -15,16 +15,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.nightonke.boommenu.BoomMenuButton
-        android:id="@+id/bmb"
+    <!--<com.nightonke.boommenu.BoomMenuButton-->
+        <!--android:id="@+id/bmb"-->
 
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:bmb_buttonEnum="ham"
-        app:bmb_piecePlaceEnum="piecePlace_ham_4"
-        app:bmb_buttonPlaceEnum="buttonPlace_ham_4"
-        android:background="#000"
-        />
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--app:bmb_buttonEnum="ham"-->
+        <!--app:bmb_piecePlaceEnum="piecePlace_ham_4"-->
+        <!--app:bmb_buttonPlaceEnum="buttonPlace_ham_4"-->
+        <!--android:background="#000"-->
+        <!--/>-->
 
     <FrameLayout
         android:id="@+id/content_frame"
