Nav Header Changes.

--- a/app/src/main/res/layout/content_holy__bible.xml
+++ b/app/src/main/res/layout/content_holy__bible.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/listview"
         android:dividerHeight="0.5dp"
         android:divider="#D3D1D1"
