--- a/app/src/main/res/layout/chapter.xml
+++ b/app/src/main/res/layout/chapter.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
+    android:theme="@style/Theme.AppCompat.NoActionBar"
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
@@ -9,7 +10,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
-    <ListView android:id="@android:id/list"
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/list"
         android:dividerHeight="0.5dp"
         android:divider="#B6B5B5"
         android:layout_width="fill_parent"
