--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#009efd</color>
     <color name="colorPrimaryDark">#0478DD</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="WHITE">#fff</color>
 </resources>
