--- a/app/src/main/res/layout/verse_row.xml
+++ b/app/src/main/res/layout/verse_row.xml
@@ -7,7 +7,8 @@
     <com.g.theholybible.providers.TextViewImmacBytes
         android:id="@+id/verse_number"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
+        android:textColor="#000"
         android:text="[1]"
         android:textSize="10dip" />
 
@@ -16,14 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/verse_number"
+        android:textColor="#000"
+
         android:paddingLeft="5dip"
         android:text="testing" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/verse_text"
-        android:src="@drawable/bible"
-        />
 
 </RelativeLayout>
