--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#0478DD</color>
     <color name="colorAccent">#D81B60</color>
     <color name="WHITE">#fff</color>
-    <color name="mystatus">#009efd</color>
+    <color name="gray">#ACABAB</color>
 </resources>
