--- a/app/src/main/res/layout/chapter.xml
+++ b/app/src/main/res/layout/chapter.xml
@@ -13,10 +13,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:background="@color/WHITE"
         android:gravity="center_horizontal"
         android:padding="7dp"
+        android:shadowColor="#CAC8C8"
+        android:elevation="5dp"
         android:id="@+id/chapter_heading"
         />
+
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0.5dp"-->
+<!--        android:background="#CAC8C8"-->
+<!--        />-->
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/list"
