--- a/app/src/main/res/layout/verse_row.xml
+++ b/app/src/main/res/layout/verse_row.xml
@@ -10,16 +10,15 @@
         android:layout_height="50dp"
         android:textColor="#000"
         android:text="[1]"
-        android:textSize="10dip" />
+        android:textSize="10sp" />
 
     <com.g.theholybible.providers.TextViewImmacBytes
         android:id="@+id/verse_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/verse_number"
+        android:layout_toEndOf="@id/verse_number"
         android:textColor="#000"
-
-        android:paddingLeft="5dip"
+        android:paddingStart="5dp"
         android:text="testing" />
 
 
