--- a/app/src/main/res/layout/fragment_daily_notes.xml
+++ b/app/src/main/res/layout/fragment_daily_notes.xml
@@ -6,9 +6,12 @@
     android:background="#fff"
     tools:context=".fragments.daily_notes">
 
-    <TextView
+
+    <com.baoyz.swipemenulistview.SwipeMenuListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hi" />
+        android:layout_height="wrap_content"
+        android:id="@+id/listt"
+        />
+
 
 </FrameLayout>
