--- a/app/src/main/res/layout/activity_write_pop.xml
+++ b/app/src/main/res/layout/activity_write_pop.xml
@@ -27,4 +27,15 @@
         android:textSize="15sp"
         />
 
+    <Button
+        android:id="@+id/save_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Note"
+        android:textAllCaps="false"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
+        />
+
+
 </LinearLayout>
