--- a/app/src/main/res/layout/fragment_daily_notes.xml
+++ b/app/src/main/res/layout/fragment_daily_notes.xml
@@ -23,6 +23,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listt"
+        android:dividerHeight="0.5dp"
+        android:background="@color/WHITE"
+        android:divider="#CAC8C8"
         />
 
     </LinearLayout>
