--- a/app/src/main/res/layout/verse_row.xml
+++ b/app/src/main/res/layout/verse_row.xml
@@ -2,12 +2,12 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="wrap_content">
 
     <com.g.theholybible.providers.TextViewImmacBytes
         android:id="@+id/verse_number"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:textColor="#000"
         android:text="[1]"
         android:textSize="10sp" />
