--- a/app/src/main/res/layout/content_holy__bible.xml
+++ b/app/src/main/res/layout/content_holy__bible.xml
@@ -2,29 +2,81 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:theme="@style/Theme.AppCompat.NoActionBar"
-
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/Theme.AppCompat.NoActionBar">
+
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:layout_below="@+id/heading"
+        android:layout_marginTop="10dp"
         android:id="@+id/listview"
-        android:dividerHeight="0.5dp"
-        android:divider="#D3D1D1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:divider="#D3D1D1"
+        android:dividerHeight="0.5dp" />
 
-    <!--<com.nightonke.boommenu.BoomMenuButton-->
-        <!--android:id="@+id/bmb"-->
+    <TextView
+        android:id="@+id/heading"
+        android:padding="2dp"
+        android:layout_width="match_parent"
+        android:elevation="25dp"
+        android:background="@color/WHITE"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/balthazar"
+        android:gravity="center"
+        android:text="The Holy Bible"
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="50sp"
+        android:textStyle="italic"
+        />
 
-        <!--android:layout_width="40dp"-->
-        <!--android:layout_height="40dp"-->
-        <!--app:bmb_buttonEnum="ham"-->
-        <!--app:bmb_piecePlaceEnum="piecePlace_ham_4"-->
-        <!--app:bmb_buttonPlaceEnum="buttonPlace_ham_4"-->
-        <!--android:background="#000"-->
-        <!--/>-->
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/addd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:fab_addButtonColorNormal="@color/blue"
+        fab:fab_labelsPosition="right"
+
+        >
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/blue"
+            fab:fab_icon="@drawable/heart"
+            fab:fab_title="Label on the right"
+
+            />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/dano"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/blue"
+            app:fab_icon="@drawable/pen"
+
+            fab:fab_title="Another one on the right" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/blue"
+            app:fab_icon="@drawable/search"
+            fab:fab_title="Another one on the right" />
+
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
     <FrameLayout
         android:id="@+id/content_frame"
